# chhRobotics_CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
PathPlanning/: CMakeLists.txt
PathPlanning/A-Star/: Astar.cpp  Astar.h  main.cpp
PathPlanning/Artifical_Potential_Field/: APF.cpp  APF.h  main.cpp
PathPlanning/B-spline/: BSpline.cpp  BSpline.h  main.cpp
PathPlanning/Bezier/: BezierCurve.cpp  BezierCurve.h  main.cpp
PathPlanning/Curve_interpolation/: main.cpp
PathPlanning/Dijkstra/: Dijkstra.cpp  Dijkstra.h  main.cpp
PathPlanning/Dubins_Path/: Dubins.cpp  Dubins.h  main.cpp
PathPlanning/Dynamic_Window_Approach/: DWA.cpp  DWA.h  main.cpp
PathPlanning/Rapidly-exploring_Random_Tree/: RRT.cpp  RRT.h  main.cpp
PathPlanning/Rapidly-exploring_Random_Tree_Star/: RRT_Star.cpp  RRT_Star.h  main.cpp
PathPlanning/Rapidly-exploring_Random_Tree_connect/: RRT_connect.cpp  RRT_connect.h  main.cpp
PathPlanning/Reeds_Shepp_Path/: ReedsShepp.cpp  ReedsShepp.h  main.cpp
PathPlanning/utils/: geometry_utils.h
PathTracking/: CMakeLists.txt
PathTracking/LQR/: LQRControl.cpp  LQRControl.h  main.cpp
PathTracking/MPC/: MPCControl.cpp  MPCControl.h  MyReferPath.cpp  MyReferPath.h  README.md  main.cpp
PathTracking/Model_Predictive_Speed_Steel_Control/: ModelPredictiveControl.cpp  ModelPredictiveControl.h  README.md  cubic_spline.hpp  main.cpp
PathTracking/PID/: KinematicModel.cpp  KinematicModel.h  PID_controller.cpp  PID_controller.h  main.cpp
PathTracking/Pure_Pursuit/: PurePursuit.cpp  PurePursuit.h  main.cpp
PathTracking/Rear_Wheel_Feedback/: MyReferencePath.cpp  MyReferencePath.h  RearWheelFeedback.cpp  RearWheelFeedback.h  main.cpp
PathTracking/Stanley/: Stanley.cpp  Stanley.h  main.cpp
PathTracking/utils/: KinematicModel.cpp  KinematicModel.h  LateralErrorModel.cpp  LateralErrorModel.h  MyReferencePath.cpp  MyReferencePath.h  NormalizeAngle.h  NormalizeAngle.hpp
